# ImPhSh

./: README.md
ImPhSh/: README.md  setup.cfg  setup.py
ImPhSh-0.1/: setup.cfg
ImPhSh/src/Image_Photo_Shop.egg-info/: PKG-INFO  SOURCES.txt
