[metadata]
name = Image_Photo_Shop
version = 0.0.1
author = Letavin Artem, Galkin Maxim
author_email = therealark2.0@gmail.com
description = Contains various functions that help to process the image
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src